Checkstyle fixes. Better colorize output.